--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
 	"semi": true,
 	"trailingComma": "all",
 	"jsxSingleQuote": true,
-	"jsxBracketSameLine": true,
+	"jsxBracketSameLine": false,
 	"tabWidth": 3,
 	"useTabs": true
 }
