--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@use-gesture/react": "^10.3.1",
-    "delaunator": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "robust-predicates": "^3.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
